--- a/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.html
+++ b/src/app/core/components/fund-party/fund-party-select/fund-party-select.component.html
@@ -1,38 +1,22 @@
-<!-- <main>
-  <label>
-    {{title}}:
-  </label>
-  <div class="select">
-    <input type="text" name="fundParty" [(ngModel)]="fundParty" disabled placeholder="请选择付款方">
-    <i class="down-triangle"></i>
-  </div>
-
-  <div class="ul-select" *ngIf="isListShow">
-    <ul>
-      <li (click)="select(item)" *ngFor="let item of fundPartyList">
-        {{item?.name}}
-      </li>
-    </ul>
-    <div class="add" (click)="add()">添加付款方</div>
-  </div>
-</main> -->
-
 <main>
   <form>
     <div class="form-item">
       <label class="form-label" for="input-example-1">{{title}}</label>
       <div class="has-icon-left" #fundPartyListEle>
-        <input type="text" class="form-input" placeholder="请选择收款方" name="fundParty" [(ngModel)]="fundParty"
+        <input type="text" #fundPartyInputEle class="form-input" [placeholder]="'请选择'+title" name="fundParty" [(ngModel)]="fundParty"
           autocomplete="off" id="fundParty-list">
-        <!-- <i class="fa fa-share" aria-hidden="true"></i> -->
         <i class="form-icon fa fa-share" aria-hidden="true"></i>
       </div>
-      <ul class="menu" *ngIf="ulShow">
-        <li class="menu-item" *ngFor="let item of list" (click)="select(item)">
-          <a>{{item?.name}}</a>
+      <ul class="menu" id="fundParty-ul" [style.display]="ulShow === true ? 'block':'none'">
+        <li [id]="item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
+          <a class="text-ellipsis" [class.li-selected]="fundParty === item.name">{{item?.name}}</a>
+          <p class="add-edit">
+            <i class="icon icon-edit"></i>
+            <i class="icon icon-delete"></i>
+          </p>
         </li>
         <li class="menu-item add">
-          <button class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i> 添加收款方</button>
+          <button class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i> 添加收款方</button>
         </li>
       </ul>
     </div>
