--- a/src/app/core/components/addreess/address-select/address-select.component.html
+++ b/src/app/core/components/addreess/address-select/address-select.component.html
@@ -7,12 +7,17 @@
           autocomplete="off" id="address-list">
         <i class="form-icon icon icon-location" aria-hidden="true"></i>
       </div>
-      <ul id="address-ul" class="menu" *ngIf="ulShow">
+      <ul id="address-ul" class="menu" [style.display]="ulShow === true ? 'block':'none'">
         <li [id]="item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
-          <a [class.li-selected]="address === item.alias_name">{{item?.province}}|{{item?.city}}|{{item?.area}}</a>
+          <a class="text-ellipsis"
+            [class.li-selected]="address === item.alias_name">{{item?.province}}|{{item?.city}}|{{item?.area}}</a>
+          <p class="add-edit">
+            <i class="icon icon-edit" (click)="edit($event,item)"></i>
+            <i class="icon icon-delete" (click)="delete($event,item)"></i>
+          </p>
         </li>
         <li class="menu-item add">
-          <button tabindex="-1" class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i>
+          <button tabindex="-1" class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i>
             添加地点</button>
         </li>
       </ul>
