--- a/src/app/core/components/fund-channel/fund-channel-select/fund-channel-select.component.scss
+++ b/src/app/core/components/fund-channel/fund-channel-select/fund-channel-select.component.scss
@@ -1,80 +1,4 @@
-// main {
-//     position: relative;
-//   }
-  
-//   .select {
-//     position: relative;
-  
-//     i {
-//       position: absolute;
-//       top: 6px;
-//       right: 2px;
-//     }
-//   }
-  
-//   .ul-select {
-//     display: flex;
-//     position: absolute;
-//     width: 100%;
-//     flex-direction: column;
-//     z-index: 1000;
-//     .add {
-//       cursor: pointer;
-//       box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-//       height: 35px;
-//       line-height: 35px;
-//       background: #fff;
-//       top: 0px;
-//       position: relative;
-//       padding: 0 5px;
-  
-//       &:hover {
-//         background: #f5f5f5;
-//         color: #40a9ff;
-//       }
-//     }
-//   }
-  
-//   input {
-//     width: 98%;
-//     margin-top: 5px;
-//     border: none;
-//     border-bottom: 1px dashed #000;
-//     height: 20px;
-//     cursor: pointer;
-//   }
-  
-//   input:disabled {
-//     background-color: #fff;
-//   }
-  
-  
-//   input::-webkit-input-placeholder {
-//     color: #A2ABAB;
-//     font-size: 16px;
-//   }
-  
-//   ul {
-//     max-height: 125px;
-//     overflow-y: auto;
-//     width: 100%;
-//     margin: 0;
-//     padding: 0;
-//     list-style: none;
-//     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-//     background: #fff;
-  
-//     li {
-//       height: 32px;
-//       line-height: 32px;
-//       cursor: pointer;
-//       padding: 0 10px;
-  
-//       &:hover {
-//         background: #f5f5f5;
-//       }
-//     }
-//   }
+
 .form-item {
   position: relative;
 
@@ -87,6 +11,22 @@
 
     li {
       cursor: pointer;
+      display: flex;
+      align-items: center;
+      font-size: 14px;
+
+      &:hover {
+        background: #f1f1fc;
+        color: #5755d9;
+  
+        p {
+          display: inline-flex;
+        }
+      }
+    }
+
+    a {
+      flex-grow: 1;
     }
 
     .add {
@@ -100,6 +40,33 @@
   }
 }
 
+.li-selected {
+  background: #f1f1fc;
+  color: #5755d9;
+}
+
+.add-edit {
+  display: none;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+  height: 100%;
+
+  i {
+    margin: 0 3px;
+  }
+}
+
+
 ul::-webkit-scrollbar {
   display: none;
+}
+
+.menu .menu-item {
+  padding: 0;
+
+  a {
+    margin: 0;
+  }
 }
