--- a/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.html
+++ b/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.html
@@ -25,17 +25,20 @@
     <div class="form-item">
       <label class="form-label" for="input-example-1">{{title}}</label>
       <div class="has-icon-left" #fundAccountListEle>
-        <input type="text" class="form-input" placeholder="请选择付款账户" name="fundAccount" [(ngModel)]="fundAccount"
+        <input type="text" #fundAccountInputEle class="form-input" placeholder="请选择付款账户" name="fundAccount" [(ngModel)]="fundAccount"
           autocomplete="off" id="fundAccount-list">
         <i class="form-icon fa fa-folder-open" aria-hidden="true"></i>
       </div>
-      <ul class="menu" *ngIf="ulShow">
-        <li class="menu-item" *ngFor="let item of list" (click)="select(item)">
-          <a>{{item?.name}}</a>
-          <a>{{item?.balance}}</a>
+      <ul class="menu" id="fundAccount-ul" [style.display]="ulShow === true ? 'block':'none'">
+        <li [id]="item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
+          <a class="text-ellipsis" [class.li-selected]="fundAccount === item.name">{{item?.name}} - {{item?.balance}}</a>
+          <p class="add-edit">
+            <i class="icon icon-edit"></i>
+            <i class="icon icon-delete"></i>
+          </p>
         </li>
         <li class="menu-item add">
-          <button class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i> 添加付款账户</button>
+          <button class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i> 添加付款账户</button>
         </li>
       </ul>
     </div>
