--- a/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.scss
+++ b/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.scss
@@ -93,16 +93,20 @@
       cursor: pointer;
       display: flex;
       align-items: center;
-      justify-content: space-between;
+      font-size: 14px;
+
+      &:hover {
+        background: #f1f1fc;
+        color: #5755d9;
+
+        p {
+          display: inline-flex;
+        }
+      }
     }
 
-    li:hover {
-      background: #f1f1fc;
-      color: #5755d9;
-    }
-
-    a:hover {
-      pointer-events: none;
+    a {
+      flex-grow: 1;
     }
 
     .add {
@@ -116,6 +120,33 @@
   }
 }
 
+.li-selected {
+  background: #f1f1fc;
+  color: #5755d9;
+}
+
+.add-edit {
+  display: none;
+  flex-direction: row;
+  margin: 0;
+  padding: 0;
+  justify-content: space-between;
+  height: 100%;
+
+  i {
+    margin: 0 3px;
+  }
+}
+
+
 ul::-webkit-scrollbar {
   display: none;
+}
+
+.menu .menu-item {
+  padding: 0;
+
+  a {
+    margin: 0;
+  }
 }
