--- a/src/app/core/components/memo/memo.component.html
+++ b/src/app/core/components/memo/memo.component.html
@@ -4,7 +4,7 @@
   </label>
 
   <div class="content">
-    <textarea class="form-input" maxlength="{{maxNumber}}" placeholder="请填写备注信息" rows="3" name="memo" [ngModel]="memo"
+    <textarea tabindex="-1" class="form-input" maxlength="{{maxNumber}}" placeholder="请填写备注信息" rows="3" name="memo" [ngModel]="memo"
       (ngModelChange)="getMemo($event)"></textarea>
     <span *ngIf="maxNumber">{{memoLength}}/{{maxNumber}}</span>
   </div>
