--- a/src/app/core/components/addreess/address-select/address-select.component.scss
+++ b/src/app/core/components/addreess/address-select/address-select.component.scss
@@ -81,6 +81,8 @@
   position: relative;
 
   ul {
+    padding: 0;
+    border-radius: .1rem .1rem 0 0;
     position: absolute;
     width: 100%;
     max-height: 150px;
@@ -95,12 +97,13 @@
 
       a {
         flex-grow: 1;
-        text-align: center;
+        text-align: left;
       }
 
       &:hover {
         background: #f1f1fc;
         color: #5755d9;
+
         p {
           display: inline-flex;
         }
@@ -113,7 +116,8 @@
     }
 
     button {
-      width: 100%
+      width: 100%;
+      border-radius: 0;
     }
   }
 }
