--- a/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.scss
+++ b/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.scss
@@ -2,6 +2,8 @@
   position: relative;
 
   ul {
+    padding: 0;
+    border-radius: .1rem .1rem 0 0;
     position: absolute;
     width: 100%;
     max-height: 150px;
@@ -17,7 +19,7 @@
       &:hover {
         background: #f1f1fc;
         color: #5755d9;
-  
+
         p {
           display: inline-flex;
         }
@@ -34,7 +36,8 @@
     }
 
     button {
-      width: 100%
+      width: 100%;
+      border-radius: 0;
     }
   }
 }
