--- a/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.scss
+++ b/src/app/core/components/fundAccount/fund-account-select/fund-account-select.component.scss
@@ -83,6 +83,8 @@
   position: relative;
 
   ul {
+    padding: 0;
+    border-radius: .1rem .1rem 0 0;
     position: absolute;
     width: 100%;
     max-height: 150px;
@@ -115,7 +117,8 @@
     }
 
     button {
-      width: 100%
+      width: 100%;
+      border-radius: 0;
     }
   }
 }
