--- a/src/app/core/components/participant/participant-select/participant-select.component.scss
+++ b/src/app/core/components/participant/participant-select/participant-select.component.scss
@@ -2,6 +2,14 @@
   flex-grow: 1;
 }
 
+i {
+  cursor: pointer;
+}
+
+.chip {
+  -webkit-app-region: no-drag;
+}
+
 main {
   display: flex;
   flex-direction: row;
@@ -71,118 +79,3 @@ ul::-webkit-scrollbar {
 input:focus {
   box-shadow: none;
 }
-
-
-
-
-// .selected-participant {
-//   display: flex;
-//   flex-direction: row;
-//   flex-wrap: wrap;
-//   padding: 8px 0;
-
-//   li {
-//     margin: 2px 4px;
-//     border: 1px dashed #dedede;
-//     padding: 5px;
-//     cursor: pointer;
-//     position: relative;
-//     word-break: keep-all;
-//     height: 20px;
-//     line-height: 20px;
-//     font-size: 14px;
-
-//     &:hover {
-//       i {
-//         display: inline-flex;
-//       }
-//     }
-
-//     i::before {
-//       content: '×';
-//     }
-
-//     i {
-//       display: none;
-//       position: absolute;
-//       right: -5px;
-//       top: -10px;
-//       font-size: 16px;
-//       background: red;
-//       border-radius: 50%;
-//       width: 15px;
-//       height: 15px;
-//       align-items: center;
-//       justify-content: center;
-//       cursor: pointer;
-//     }
-//   }
-
-//   .select {
-//     position: relative;
-//     border: 1px dashed;
-
-//     i {
-//       position: absolute;
-//       top: 6px;
-//       right: 2px;
-//     }
-
-//     button {
-//       height: 32px;
-//       line-height: 32px;
-//       border: 1px dashed;
-//       background: #fff;
-//       width: 120px;
-//     }
-//   }
-// }
-
-
-// .ul-select {
-//   display: flex;
-//   position: absolute;
-//   width: 120px;
-//   flex-direction: column;
-//   top: 32px;
-//   left: 0px;
-//   z-index:1000;
-//   .add {
-//     cursor: pointer;
-//     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-//     height: 35px;
-//     line-height: 35px;
-//     background: #fff;
-//     top: 0px;
-//     position: relative;
-//     padding: 0 5px;
-
-//     &:hover {
-//       background: #f5f5f5;
-//       color: #40a9ff;
-//     }
-//   }
-
-//   ul {
-//     max-height: 125px;
-//     overflow-y: auto;
-//     width: 100%;
-//     margin: 0;
-//     padding: 0;
-//     list-style: none;
-//     box-shadow: 0 2px 4px -1px rgba(0, 0, 0, .2), 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12);
-//     background: #fff;
-
-//     li {
-//       height: 32px;
-//       line-height: 32px;
-//       cursor: pointer;
-//       padding: 0 10px;
-//       border: none;
-
-//       &:hover {
-//         background: #f5f5f5;
-//       }
-//     }
-//   }
-// }
