--- a/src/app/core/components/fund-channel/fund-channel-select/fund-channel-select.component.html
+++ b/src/app/core/components/fund-channel/fund-channel-select/fund-channel-select.component.html
@@ -1,34 +1,14 @@
-<!-- <main>
-  <label>
-    {{title}}:
-  </label>
-  <div class="select">
-    <input type="text" name="fundChannel" [(ngModel)]="fundChannel" disabled [placeholder]="'请选择'+title">
-    <i class="down-triangle"></i>
-  </div>
-
-  <div class="ul-select" *ngIf="isListShow">
-    <ul>
-      <li (click)="select(item)" *ngFor="let item of fundChannelList">
-        {{item?.name}}
-      </li>
-    </ul>
-    <div class="add" (click)="add()">添加{{title}}</div>
-  </div>
-</main> -->
-
-
 <main>
   <form>
     <div class="form-item">
       <label class="form-label" for="input-example-1">{{title}}</label>
       <div class="has-icon-left" #fundChannelListEle>
-        <input type="text" #fundChannelInputEle class="form-input" placeholder="请选择付款方式" name="fundChannel" [(ngModel)]="fundChannel"
-          autocomplete="off" id="fundChannel-list">
+        <input type="text" #fundChannelInputEle class="form-input" placeholder="请选择付款方式" name="fundChannel"
+          [(ngModel)]="fundChannel" autocomplete="off" id="fundChannel-list">
         <i class="form-icon fa fa-map-signs" aria-hidden="true"></i>
       </div>
-      <ul  id="fundChannel-ul" class="menu" [style.display]="ulShow === true ? 'block':'none'">
-        <li [id]="item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
+      <ul id="fundChannel-ul" class="menu" [style.display]="ulShow === true ? 'block':'none'">
+        <li [id]="'fundChannel_'+item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
           <a class="text-ellipsis" [class.li-selected]="fundChannel === item.name">{{item?.name}}</a>
           <p class="add-edit">
             <i class="icon icon-edit"></i>
@@ -36,7 +16,9 @@
           </p>
         </li>
         <li class="menu-item add">
-          <button class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i> 添加付款方式</button>
+          <button type="button" tabindex="-1" class="btn btn-primary btn-sm" (click)="add()"><i
+              class="icon icon-plus"></i>
+            添加付款方式</button>
         </li>
       </ul>
     </div>
