--- a/src/app/core/components/addreess/address-select/address-select.component.html
+++ b/src/app/core/components/addreess/address-select/address-select.component.html
@@ -1,4 +1,5 @@
-<main>
+
+<main >
   <form>
     <div class="form-item">
       <label class="form-label">{{title}}</label>
@@ -8,16 +9,15 @@
         <i class="form-icon icon icon-location" aria-hidden="true"></i>
       </div>
       <ul id="address-ul" class="menu" [style.display]="ulShow === true ? 'block':'none'">
-        <li [id]="item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
-          <a class="text-ellipsis"
-            [class.li-selected]="address === item.alias_name">{{item.alias_name}}</a>
+        <li [id]="'address_'+item.id" class="menu-item" *ngFor="let item of list" (click)="select(item)">
+          <a class="text-ellipsis" [class.li-selected]="address === item.alias_name">{{item.alias_name}}</a>
           <p class="add-edit">
             <i class="icon icon-edit" (click)="edit($event,item)"></i>
             <i class="icon icon-delete" (click)="delete($event,item)"></i>
           </p>
         </li>
         <li class="menu-item add">
-          <button tabindex="-1" class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i>
+          <button tabindex="-1" type="button" class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i>
             添加地点</button>
         </li>
       </ul>
