--- a/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.html
+++ b/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.html
@@ -3,8 +3,8 @@
     <div class="form-item">
       <label class="form-label" for="input-example-1">{{title}}</label>
       <div class="has-icon-left" #expenseCategoryListEle>
-        <input type="text" #expenseCategoryInputEle class="form-input" placeholder="请选择支出类别" name="expenseCategory" [(ngModel)]="expenseCategory"
-          autocomplete="off" id="expenseCategory-list">
+        <input type="text" #expenseCategoryInputEle class="form-input" placeholder="请选择支出类别" name="expenseCategory"
+          [(ngModel)]="expenseCategory" autocomplete="off" id="expenseCategory-list">
         <i class="form-icon fa fa-th-large" aria-hidden="true"></i>
       </div>
       <ul class="menu" id="expenseCategory-ul" [style.display]="ulShow === true ? 'block':'none'">
@@ -16,7 +16,8 @@
           </p>
         </li>
         <li class="menu-item add">
-          <button class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i> 添加支出类别</button>
+          <button type="button" tabindex="-1" class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i>
+            添加支出类别</button>
         </li>
       </ul>
     </div>
