--- a/src/app/core/components/fund-channel/fund-channel-select/fund-channel-select.component.scss
+++ b/src/app/core/components/fund-channel/fund-channel-select/fund-channel-select.component.scss
@@ -1,8 +1,9 @@
-
 .form-item {
   position: relative;
 
   ul {
+    padding: 0;
+    border-radius: .1rem .1rem 0 0;
     position: absolute;
     width: 100%;
     max-height: 150px;
@@ -18,7 +19,7 @@
       &:hover {
         background: #f1f1fc;
         color: #5755d9;
-  
+
         p {
           display: inline-flex;
         }
@@ -35,7 +36,8 @@
     }
 
     button {
-      width: 100%
+      width: 100%;
+      border-radius: 0;
     }
   }
 }
