--- a/src/app/core/components/addreess/address-select/address-select.component.html
+++ b/src/app/core/components/addreess/address-select/address-select.component.html
@@ -17,7 +17,7 @@
           </p>
         </li>
         <li class="menu-item add">
-          <button tabindex="-1" type="button" class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i>
+          <button tabindex="-1" type="button" class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i>
             添加地点</button>
         </li>
       </ul>
