--- a/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.html
+++ b/src/app/core/components/expense-category/expense-category-select/expense-category-select.component.html
@@ -16,7 +16,7 @@
           </p>
         </li>
         <li class="menu-item add">
-          <button type="button" tabindex="-1" class="btn btn-primary btn-sm" (click)="add($event)"><i class="icon icon-plus"></i>
+          <button type="button" tabindex="-1" class="btn btn-primary btn-sm" (click)="add()"><i class="icon icon-plus"></i>
             添加支出类别</button>
         </li>
       </ul>
